Bug 151944 - IMPRESS: error colour export in bmp
Summary: IMPRESS: error colour export in bmp
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.3.6.2 release
Hardware: All All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords:
Depends on:
Blocks:
 
Reported: 2022-11-07 10:55 UTC by Alessandro
Modified: 2022-11-08 19:56 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Souce IMPRESS file. (10.66 KB, application/vnd.oasis.opendocument.presentation)
2022-11-07 10:55 UTC, Alessandro
Details
BMP file created (15.48 KB, image/bmp)
2022-11-07 11:53 UTC, Alessandro
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alessandro 2022-11-07 10:55:49 UTC
Created attachment 183446 [details]
Souce IMPRESS file.

Dear All,

I have created a simple IMPRESS file.
If I try to export file in .BMP format, IMPRESS create the file, but the color are in scale of gray.
If I try to export file in .PDF format, the file is created correctly.
Could you help me?

Thanks
Alessandro
Comment 1 Julien Nabet 2022-11-07 11:47:19 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 2 Julien Nabet 2022-11-07 11:52:23 UTC
I gave a try with https://gerrit.libreoffice.org/c/core/+/142375
Comment 3 Alessandro 2022-11-07 11:53:29 UTC
Created attachment 183447 [details]
BMP file created

Attached BPM file.
Comment 4 Commit Notification 2022-11-08 09:24:59 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f627ac6a579b56876ba6b2cc2325e6166a25d07d

tdf#151944: error colour export in bmp

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Julien Nabet 2022-11-08 18:04:01 UTC
Patch waiting for review for 7.4 branch:
https://gerrit.libreoffice.org/c/core/+/142437
Hope it'll be accepted.

Let's put this one to FIXED anyway since we can't do more.
Comment 6 Commit Notification 2022-11-08 19:56:26 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/515b8d9a810e9c5d26f365e3a3b08d73f5dcc18a

tdf#151944: error colour export in bmp

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.