tdf#151944: error colour export in bmp

4 bits bmp support has been dropped in March 2021 with:
a6c6f35ccc78e74cfa76397d649c1b6fc4baad29
"drop 4bpp image formats

on a path to simplifying our internal bitmap stuff, aiming to
support a smaller set of image formats, but support them
in an accelerated fashion.
"

1 bit dithered bmp support last remnant has been dropped in April 2020 with:
e3cc7b94b13d6cc4e044cfd688e0fcc9dca63987
"loplugin:unusedenumconstants BmpConversion"

Change-Id: I958bea6baabb9ef21c5fa71bfc7ff96cba201245
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142375
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>